[gd_scene load_steps=5 format=3 uid="uid://csy7hbfqpgqg0"]

[ext_resource type="Script" path="res://Scripts/Voley_Counter.gd" id="1_7ecg2"]
[ext_resource type="LabelSettings" uid="uid://ddfx7btn6oyh" path="res://Setings/Points.tres" id="2_20gga"]
[ext_resource type="LabelSettings" uid="uid://suu2wjaohbam" path="res://Setings/new_label_settings.tres" id="3_scolo"]
[ext_resource type="Texture2D" uid="uid://b6ppvdn6pci3l" path="res://icon.svg" id="4_ln4ag"]

[node name="Voley_Counter" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_7ecg2")

[node name="Button_P1" type="Button" parent="."]
layout_mode = 2
offset_left = -512.0
offset_top = -260.0
offset_right = -362.0
offset_bottom = -110.0
text = "P1"

[node name="Button_P2" type="Button" parent="."]
layout_mode = 2
offset_left = -512.0
offset_top = -68.0
offset_right = -362.0
offset_bottom = 82.0
text = "P2"

[node name="Sets_Container" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -293.0
offset_right = 518.0
offset_bottom = 187.0
scale = Vector2(0.783935, 0.783935)

[node name="VBoxContainer" type="HBoxContainer" parent="Sets_Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Points_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("2_20gga")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set1_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set2_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set3_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set4_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set5_P1" type="Label" parent="Sets_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VBoxContainer2" type="HBoxContainer" parent="Sets_Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Points_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("2_20gga")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set1_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set2_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set3_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set4_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Set5_P2" type="Label" parent="Sets_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("3_scolo")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Listen_btn" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -328.0
offset_top = 54.0
offset_right = -83.0
offset_bottom = 112.0
text = "Listen"

[node name="Stop_btn" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -327.0
offset_top = 144.0
offset_right = -83.0
offset_bottom = 204.0
text = "Stop"

[node name="GetOutput_btn" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = -327.0
offset_top = 239.0
offset_right = -82.0
offset_bottom = 297.0
text = "GetOutput"

[node name="TextEdit" type="TextEdit" parent="."]
clip_contents = true
layout_mode = 0
offset_left = -192.0
offset_top = 100.0
offset_right = 24.0
offset_bottom = 297.0
wrap_mode = 1

[node name="TextEdit2" type="TextEdit" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 128.0
offset_top = 100.0
offset_right = 345.0
offset_bottom = 297.0
text = "Debes decir la palabra clave \"GANA\" para iniciar el comando de voz. A continuacion indicar que equipo gano el punto. \"EQUIPO 1\" o \"EQUIPO 2\"."
wrap_mode = 1
scroll_fit_content_height = true

[node name="ServeIndicator" type="TextureRect" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 371.0
offset_top = -216.0
offset_right = 411.0
offset_bottom = -176.0
texture = ExtResource("4_ln4ag")
expand_mode = 1

[connection signal="pressed" from="Button_P1" to="." method="_on_button_p_1_pressed"]
[connection signal="pressed" from="Button_P2" to="." method="_on_button_p_2_pressed"]
[connection signal="button_down" from="Listen_btn" to="." method="_on_listen_btn_button_down"]
